--- a/src/index.html
+++ b/src/index.html
@@ -9,52 +9,6 @@
 <body>
     <div id="root"></div>
 
-    <div id="audio-test" class="p-6 bg-gray-50 min-h-screen">
-        <h1 class="text-3xl font-bold mb-6 text-gray-800 text-center">Song Maker Piano</h1>
-
-        <!-- Octave 3 -->
-        <div class="mb-6">
-            <h3 class="text-lg font-semibold mb-3 text-gray-700">Octave 3</h3>
-            <div class="flex gap-2 flex-wrap">
-                <button data-note="48" class="note-btn bg-blue-500 hover:bg-blue-600 text-white font-medium py-3 px-6 rounded-lg shadow-md transition-colors">C3</button>
-                <button data-note="50" class="note-btn bg-green-500 hover:bg-green-600 text-white font-medium py-3 px-6 rounded-lg shadow-md transition-colors">D3</button>
-                <button data-note="52" class="note-btn bg-yellow-500 hover:bg-yellow-600 text-white font-medium py-3 px-6 rounded-lg shadow-md transition-colors">E3</button>
-                <button data-note="53" class="note-btn bg-orange-500 hover:bg-orange-600 text-white font-medium py-3 px-6 rounded-lg shadow-md transition-colors">F3</button>
-                <button data-note="55" class="note-btn bg-red-500 hover:bg-red-600 text-white font-medium py-3 px-6 rounded-lg shadow-md transition-colors">G3</button>
-                <button data-note="57" class="note-btn bg-purple-500 hover:bg-purple-600 text-white font-medium py-3 px-6 rounded-lg shadow-md transition-colors">A3</button>
-                <button data-note="59" class="note-btn bg-pink-500 hover:bg-pink-600 text-white font-medium py-3 px-6 rounded-lg shadow-md transition-colors">B3</button>
-            </div>
-        </div>
-
-        <!-- Octave 4 (Middle C) -->
-        <div class="mb-6">
-            <h3 class="text-lg font-semibold mb-3 text-gray-700">Octave 4 (Middle C)</h3>
-            <div class="flex gap-2 flex-wrap">
-                <button data-note="60" class="note-btn bg-blue-600 hover:bg-blue-700 text-white font-medium py-3 px-6 rounded-lg shadow-md transition-colors border-2 border-blue-800">C4</button>
-                <button data-note="62" class="note-btn bg-green-600 hover:bg-green-700 text-white font-medium py-3 px-6 rounded-lg shadow-md transition-colors">D4</button>
-                <button data-note="64" class="note-btn bg-yellow-600 hover:bg-yellow-700 text-white font-medium py-3 px-6 rounded-lg shadow-md transition-colors">E4</button>
-                <button data-note="65" class="note-btn bg-orange-600 hover:bg-orange-700 text-white font-medium py-3 px-6 rounded-lg shadow-md transition-colors">F4</button>
-                <button data-note="67" class="note-btn bg-red-600 hover:bg-red-700 text-white font-medium py-3 px-6 rounded-lg shadow-md transition-colors">G4</button>
-                <button data-note="69" class="note-btn bg-purple-600 hover:bg-purple-700 text-white font-medium py-3 px-6 rounded-lg shadow-md transition-colors">A4</button>
-                <button data-note="71" class="note-btn bg-pink-600 hover:bg-pink-700 text-white font-medium py-3 px-6 rounded-lg shadow-md transition-colors">B4</button>
-            </div>
-        </div>
-
-        <!-- Octave 5 -->
-        <div class="mb-6">
-            <h3 class="text-lg font-semibold mb-3 text-gray-700">Octave 5</h3>
-            <div class="flex gap-2 flex-wrap">
-                <button data-note="72" class="note-btn bg-blue-400 hover:bg-blue-500 text-white font-medium py-3 px-6 rounded-lg shadow-md transition-colors">C5</button>
-                <button data-note="74" class="note-btn bg-green-400 hover:bg-green-500 text-white font-medium py-3 px-6 rounded-lg shadow-md transition-colors">D5</button>
-                <button data-note="76" class="note-btn bg-yellow-400 hover:bg-yellow-500 text-white font-medium py-3 px-6 rounded-lg shadow-md transition-colors">E5</button>
-                <button data-note="77" class="note-btn bg-orange-400 hover:bg-orange-500 text-white font-medium py-3 px-6 rounded-lg shadow-md transition-colors">F5</button>
-                <button data-note="79" class="note-btn bg-red-400 hover:bg-red-500 text-white font-medium py-3 px-6 rounded-lg shadow-md transition-colors">G5</button>
-                <button data-note="81" class="note-btn bg-purple-400 hover:bg-purple-500 text-white font-medium py-3 px-6 rounded-lg shadow-md transition-colors">A5</button>
-                <button data-note="83" class="note-btn bg-pink-400 hover:bg-pink-500 text-white font-medium py-3 px-6 rounded-lg shadow-md transition-colors">B5</button>
-            </div>
-        </div>
-    </div>
-
     <!-- Load piano instrument data from CDN -->
     <script src='https://surikov.github.io/webaudiofontdata/sound/0250_SoundBlasterOld_sf2.js'></script>
 
@@ -69,7 +23,7 @@
         const piano = window._tone_0250_SoundBlasterOld_sf2;
 
         // Initialize Elm
-        Elm.Main.init({ node: document.getElementById("root") });
+        const app = Elm.Main.init({ node: document.getElementById("root") });
 
         // Initialize WebAudioFont
         const audioContext = new AudioContext();
@@ -78,17 +32,11 @@
         // Use the captured constants
         player.loader.decodeAfterLoading(audioContext, piano);
 
-        function playNote(midiNote) {
+        // Listen to Elm port commands
+        app.ports.playNote.subscribe((noteData) => {
+            const { note, duration, volume } = noteData;
             player.queueWaveTable(audioContext, audioContext.destination,
-                piano, 0, midiNote, 0.6, 0.8);
-        }
-
-        // Wire up all note buttons
-        document.querySelectorAll('.note-btn').forEach(button => {
-            button.addEventListener('click', () => {
-                const note = parseInt(button.dataset.note);
-                playNote(note);
-            });
+                piano, 0, note, duration, volume);
         });
     </script>
 </body>
