Implement high-frequency time sync between JS and Elm
- Add timeSync port receiving audioContext.currentTime every 10ms
- Add sequencer state to Elm model (currentTime, isPlaying, sequenceStartTime)
- Add debug display showing current audio time
- AudioContext starts after user interaction, time sync flows correctly

Committed by Claude

--- a/src/index.html
+++ b/src/index.html
@@ -32,6 +32,11 @@
         // Use the captured constants
         player.loader.decodeAfterLoading(audioContext, piano);
 
+        // Start high-frequency time sync to Elm
+        setInterval(() => {
+            app.ports.timeSync.send(audioContext.currentTime);
+        }, 10); // 100Hz updates
+
         // Listen to Elm port commands
         app.ports.playNote.subscribe((noteData) => {
             const { note, duration, volume } = noteData;
