Implement Phase 3: Real-time sequencing with beat-by-beat scheduling
- Add scheduleNote port for individual note scheduling with absolute timing
- Extend Model with nextNoteTime and currentNoteIndex for sequencer state
- Add StartSequence/StopSequence messages and UI controls
- Implement checkAndScheduleNote logic with 50ms look-ahead scheduling
- Add simple C-E-G-C pattern that loops continuously while playing
- Fix audio context startup by triggering scheduleNote on StartSequence
- Enable clean start/stop behavior with temporal separation preventing overlap

Committed by Claude

--- a/src/index.html
+++ b/src/index.html
@@ -60,6 +60,13 @@
                     piano, scheduledTime, note, duration, volume);
             });
         });
+
+        // Listen to real-time note scheduling
+        app.ports.scheduleNote.subscribe((noteData) => {
+            const { note, absoluteTime, duration, volume } = noteData;
+            player.queueWaveTable(audioContext, audioContext.destination,
+                piano, absoluteTime, note, duration, volume);
+        });
     </script>
 </body>
 </html>
