Add user-defined sequencer grid with visual beat tracking
- Add wakeAudioContext port to resume audio on any user interaction
- Extend Model with userPattern for user-defined note sequences
- Add ToggleGridNote message and logic for clickable grid interface
- Implement 8-beat sequencer grid with visual feedback:
  * Blue = active notes, Gray = empty slots, Yellow = currently playing
- Replace hardcoded pattern with user-configurable sequences
- Add real-time beat position indicator during playback
- Faster 250ms beat duration for more responsive feel
- Initialize with default C-E-G-C pattern for demo

Committed by Claude

--- a/src/index.html
+++ b/src/index.html
@@ -67,6 +67,13 @@
             player.queueWaveTable(audioContext, audioContext.destination,
                 piano, absoluteTime, note, duration, volume);
         });
+
+        // Wake audio context on user interaction
+        app.ports.wakeAudioContext.subscribe(() => {
+            if (audioContext.state === 'suspended') {
+                audioContext.resume();
+            }
+        });
     </script>
 </body>
 </html>
