Fix audio time display formatting to prevent visual jumping
- Improved formatTime function with proper padding
- Format: M:SS.D (e.g., 0:05.3, 1:03.2)
- Reduced time sync frequency from 100Hz to 10Hz for smoother display
- Consistent string length prevents UI jumping

Committed by Claude

--- a/src/index.html
+++ b/src/index.html
@@ -32,10 +32,10 @@
         // Use the captured constants
         player.loader.decodeAfterLoading(audioContext, piano);
 
-        // Start high-frequency time sync to Elm
+        // Start time sync to Elm for display (lower frequency for smoother display)
         setInterval(() => {
             app.ports.timeSync.send(audioContext.currentTime);
-        }, 10); // 100Hz updates
+        }, 100); // 10Hz updates for display
 
         // Listen to Elm port commands
         app.ports.playNote.subscribe((noteData) => {
