Implement functional 2D grid sequencer with playback timing
- Replace piano keyboard interface with proper 2D grid sequencer
- Add playChord port for multiple simultaneous notes
- Implement beat progression timing at 120 BPM (0.5s per beat)
- Add getActiveNotesForBeat function to extract notes from grid
- Remove unused JavaScript port subscribers (playNote, playSequence, scheduleNote)
- Grid displays 8 notes (G4 down to G3) × 8 beats with clickable cells
- Play/Stop buttons trigger actual audio sequencing through beats
- Support multiple notes per beat for chord playback

Committed by Claude

--- a/src/index.html
+++ b/src/index.html
@@ -38,34 +38,14 @@
         }, 100); // 10Hz updates for display
 
         // Listen to Elm port commands
-        app.ports.playNote.subscribe((noteData) => {
-            const { note, duration, volume } = noteData;
-            player.queueWaveTable(audioContext, audioContext.destination,
-                piano, 0, note, duration, volume);
-        });
 
-        // Listen to sequence playback commands
-        app.ports.playSequence.subscribe((sequence) => {
-            // Cancel any currently playing sequences
-            player.cancelQueue(audioContext);
-
-            const currentTime = audioContext.currentTime;
-
-            // Schedule each note in the sequence
-            sequence.forEach((noteData) => {
-                const { note, startTime, duration, volume } = noteData;
-                const scheduledTime = currentTime + startTime;
-
+        // Listen to chord playback (multiple notes simultaneously)
+        app.ports.playChord.subscribe((notes) => {
+            notes.forEach(noteData => {
+                const { note, duration, volume } = noteData;
                 player.queueWaveTable(audioContext, audioContext.destination,
-                    piano, scheduledTime, note, duration, volume);
+                    piano, 0, note, duration, volume);
             });
-        });
-
-        // Listen to real-time note scheduling
-        app.ports.scheduleNote.subscribe((noteData) => {
-            const { note, absoluteTime, duration, volume } = noteData;
-            player.queueWaveTable(audioContext, audioContext.destination,
-                piano, absoluteTime, note, duration, volume);
         });
 
         // Wake audio context on user interaction
