--- a/src/index.html
+++ b/src/index.html
@@ -40,11 +40,12 @@
         // Listen to Elm port commands
 
         // Listen to chord playback (multiple notes simultaneously)
-        app.ports.playChord.subscribe((notes) => {
+        app.ports.playChord.subscribe((data) => {
+            const { notes, when } = data;
             notes.forEach(noteData => {
                 const { note, duration, volume } = noteData;
                 player.queueWaveTable(audioContext, audioContext.destination,
-                    piano, 0, note, duration, volume);
+                    piano, when, note, duration, volume);
             });
         });
 
