Remove hardcoded MIDI note mapping in percussion handler
- Replace hardcoded if/else with configuration object percussionKit
- Map MIDI notes to instruments dynamically using percussionKit[note]
- Add error handling for missing percussion instruments
- Use Object.values() for dynamic instrument loading
- Prepare for future switchable percussion kit configurations

Committed by Claude

--- a/src/index2.html
+++ b/src/index2.html
@@ -25,8 +25,12 @@
     // Capture globals as clean constants
     const WebAudioFontPlayer = window.WebAudioFontPlayer;
     const piano = window._tone_0250_SoundBlasterOld_sf2;
-    const kickPercussion = window._drum_36_0_SBLive_sf2;  // MIDI 36 - Bass Drum 1
-    const snarePercussion = window._drum_38_0_SBLive_sf2; // MIDI 38 - Snare Drum 1
+
+    // Percussion kit configuration
+    const percussionKit = {
+        36: window._drum_36_0_SBLive_sf2,  // Kick
+        38: window._drum_38_0_SBLive_sf2   // Snare
+    };
 
     // Initialize Elm
     const app = Elm.Main2.init({ node: document.getElementById("root") });
@@ -35,10 +39,11 @@
     const audioContext = new AudioContext();
     const player = new WebAudioFontPlayer();
 
-    // Use the captured constants
+    // Load instruments
     player.loader.decodeAfterLoading(audioContext, piano);
-    player.loader.decodeAfterLoading(audioContext, kickPercussion);
-    player.loader.decodeAfterLoading(audioContext, snarePercussion);
+    Object.values(percussionKit).forEach(instrument => {
+        player.loader.decodeAfterLoading(audioContext, instrument);
+    });
 
     // Handle individual note playback
     app.ports.playNote.subscribe((data) => {
@@ -61,18 +66,22 @@
         const { note, duration, volume } = data;
         const when = audioContext.currentTime;
 
-        // Select correct percussion based on MIDI note
-        const percussionInstrument = note === 36 ? kickPercussion : snarePercussion;
+        // Select percussion instrument based on MIDI note
+        const percussionInstrument = percussionKit[note];
 
-        player.queueWaveTable(
-            audioContext,
-            audioContext.destination,
-            percussionInstrument,
-            when,
-            note,
-            duration,
-            volume
-        );
+        if (percussionInstrument) {
+            player.queueWaveTable(
+                audioContext,
+                audioContext.destination,
+                percussionInstrument,
+                when,
+                note,
+                duration,
+                volume
+            );
+        } else {
+            console.warn(`No percussion instrument found for MIDI note ${note}`);
+        }
     });
 
     // Wake audio context on user interaction
