Remove unnecessary module qualifiers in HTML imports
- Rename playNote port to playPitch for consistent terminology
- Extract helper functions for audio playback: playPitchCmdIf and playPercussionCmdIf
- Reduce code duplication by inlining simple computations in update handlers
- Fix function signature inconsistencies between pitch and percussion helpers
- Improve code organization and maintainability

Committed by Claude

--- a/src/index2.html
+++ b/src/index2.html
@@ -46,7 +46,7 @@
     });
 
     // Handle individual note playback
-    app.ports.playNote.subscribe((data) => {
+    app.ports.playPitch.subscribe((data) => {
         const { note, duration, volume } = data;
         const when = audioContext.currentTime;
 
