Rename identifiers to shorter versions for better readability
- Position → PitchPos, PercussionPosition → PercPos
- totalPitchRows → totalPitches, totalStepColumns → totalSteps
- Percussion → Perc throughout (types, functions, ports)
- Various index fields: pitchRowIndex → pitchIdx, stepColumnIndex → stepIdx
- Function name updates: pitchRowToMidiNote → pitchIdxToMidi
- Port name: playPercussion → playPerc
- Grid template variable names shortened for consistency

Committed by Claude

--- a/src/index2.html
+++ b/src/index2.html
@@ -62,7 +62,7 @@
     });
 
     // Handle percussion playback
-    app.ports.playPercussion.subscribe((data) => {
+    app.ports.playPerc.subscribe((data) => {
         const { note, duration, volume } = data;
         const when = audioContext.currentTime;
 
