Implement complete sequencer functionality with visual feedback
- Add sequencer timing logic with 80 BPM for reasonable playback speed
- Fix percussion audio routing to use correct playPerc port for MIDI 35-39
- Add real-time visual feedback highlighting current playing step
- Implement step headers, pitch cells, and percussion cells with white ring highlight
- Fix CSS grid layout using correct grid-template-columns property
- Update JavaScript timing to use setInterval for background-safe operation
- Complete function signature updates for visual feedback system
- Fix all compilation errors for proper type checking

Committed by Claude

--- a/src/index2.html
+++ b/src/index2.html
@@ -84,6 +84,13 @@
         }
     });
 
+    // Send timeSync updates using setInterval (works in background)
+    setInterval(() => {
+        if (app.ports.timeSync) {
+            app.ports.timeSync.send(audioContext.currentTime);
+        }
+    }, 16); // ~60fps
+
     // Wake audio context on first click
     document.addEventListener('click', () => {
         if (audioContext.state === 'suspended') {
