feat: add marimba sound font and update documentation

--- a/src/index2.html
+++ b/src/index2.html
@@ -16,6 +16,8 @@
 <script src='https://surikov.github.io/webaudiofontdata/sound/12836_0_SBLive_sf2.js'></script>
 <script src='https://surikov.github.io/webaudiofontdata/sound/12838_0_SBLive_sf2.js'></script>
 
+<script src='https://surikov.github.io/webaudiofontdata/sound/0110_SBLive_sf2.js'></script>
+
 <!-- Load WebAudioFont player from CDN -->
 <script src='https://surikov.github.io/webaudiofont/npm/dist/WebAudioFontPlayer.js'></script>
 
@@ -25,6 +27,7 @@
     // Capture globals as clean constants
     const WebAudioFontPlayer = window.WebAudioFontPlayer;
     const piano = window._tone_0250_SoundBlasterOld_sf2;
+    const marimba = window._tone_0110_SBLive_sf2
 
     // Percussion kit configuration
     const percussionKit = {
