chore: remove commented-out code for WebAudioFontLoader

--- a/src/index2.html
+++ b/src/index2.html
@@ -42,6 +42,11 @@
     const audioContext = new AudioContext();
     const player = new WebAudioFontPlayer();
 
+    // const WebAudioFontLoader = window.WebAudioFontLoader;
+    // const loader = new WebAudioFontLoader(player);
+    // console.log( loader.instrumentInfo(11), loader.findInstrument(11) );
+
+
     // Load instruments
     player.loader.decodeAfterLoading(audioContext, piano);
     Object.values(percussionKit).forEach(instrument => {
