--- a/src/index2.html
+++ b/src/index2.html
@@ -17,8 +17,8 @@
 <script src='https://surikov.github.io/webaudiofontdata/sound/12838_0_SBLive_sf2.js'></script>
 
 <!-- marimba pitch/tone -->
-<script src='https://surikov.github.io/webaudiofontdata/sound/0120_JCLive_sf2_file.js'></script>
 <script src='https://surikov.github.io/webaudiofontdata/sound/0120_SBLive_sf2.js'></script>
+<!--<script src='https://surikov.github.io/webaudiofontdata/sound/0120_JCLive_sf2_file.js'></script>-->
 
 <!-- Load WebAudioFont player from CDN -->
 <script src='https://surikov.github.io/webaudiofont/npm/dist/WebAudioFontPlayer.js'></script>
@@ -39,7 +39,7 @@
     player.loader.decodeAfterLoading(audioContext, '_drum_36_0_SBLive_sf2'); // kick
     player.loader.decodeAfterLoading(audioContext, '_drum_38_0_SBLive_sf2'); // snare
     player.loader.decodeAfterLoading(audioContext, '_tone_0120_SBLive_sf2'); // marimba 1
-    player.loader.decodeAfterLoading(audioContext, '_tone_0120_JCLive_sf2_file'); // marimba 2
+    // player.loader.decodeAfterLoading(audioContext, '_tone_0120_JCLive_sf2_file'); // marimba 2
 
 
     // Handle unified note playback
