feat: implement complete WebAudioFont naming consistency across entire codebase
Replace ambiguous "instrument" and "jsVarName" terminology with precise "webAudioFont" naming:

**Elm Changes:**
- Rename tonalJsVarName → tonalWebAudioFont in Instruments.elm
- Update drumKitConfig record fields: kickInstrument → kickWebAudioFont, snareInstrument → snareWebAudioFont
- Update NoteToPlay type alias: instrument → webAudioFont
- Update port playNote parameter names to use webAudioFont
- Update all usage sites in getActiveNotesForStep and playback functions
- Replace instrumentName variables with webAudioFontName for consistency

**JavaScript Changes:**
- Update port subscription destructuring to use webAudioFont field
- Update WebAudioFont instrument lookup and error messages
- Clarify comments to specify WebAudioFont terminology

**Benefits:**
- Crystal clear intent: eliminates confusion between TonalInstrument types and WebAudioFont identifiers
- Self-documenting code: webAudioFont immediately communicates purpose
- Professional naming: aligns with audio programming industry standards
- Type safety: field names clearly indicate WebAudioFont JavaScript variable names
- End-to-end consistency: from Elm types to JavaScript execution

Committed by Claude

--- a/src/index2.html
+++ b/src/index2.html
@@ -42,11 +42,11 @@
 
     // Handle unified note playback
     app.ports.playNote.subscribe((data) => {
-        const { instrument, midi, duration, volume } = data;
+        const { webAudioFont, midi, duration, volume } = data;
         const when = audioContext.currentTime;
 
-        // Look up instrument by name from window object
-        const instrumentSample = window[instrument];
+        // Look up WebAudioFont instrument by name from window object
+        const instrumentSample = window[webAudioFont];
 
         if (instrumentSample) {
             player.queueWaveTable(
@@ -59,7 +59,7 @@
                 volume
             );
         } else {
-            console.warn(`Instrument not found: ${instrument}`);
+            console.warn(`WebAudioFont instrument not found: ${webAudioFont}`);
         }
     });
 
