--- a/src/index2.html
+++ b/src/index2.html
@@ -9,14 +9,15 @@
 <body>
 <div id="root"></div>
 
-<!-- Load piano instrument data from CDN -->
-<script src='https://surikov.github.io/webaudiofontdata/sound/0000_SBLive_sf2.js'></script>
 
 <!-- Load individual percussion sounds from CDN kick snare default drum-kit-->
 <script src='https://surikov.github.io/webaudiofontdata/sound/12836_0_SBLive_sf2.js'></script>
 <script src='https://surikov.github.io/webaudiofontdata/sound/12838_0_SBLive_sf2.js'></script>
 
-<!-- marimba pitch/tone -->
+<!-- Tonal Instruments -->
+<!-- piano -->
+<script src='https://surikov.github.io/webaudiofontdata/sound/0000_SBLive_sf2.js'></script>
+<!-- marimba -->
 <script src='https://surikov.github.io/webaudiofontdata/sound/0120_SBLive_sf2.js'></script>
 <!-- strings -->
 <script src='https://surikov.github.io/webaudiofontdata/sound/0400_SBLive_sf2.js'></script>
@@ -37,11 +38,14 @@
     const audioContext = new AudioContext();
     const player = new WebAudioFontPlayer();
 
+    /* tones */
     player.loader.decodeAfterLoading(audioContext, '_tone_0000_SBLive_sf2'); // piano
-    player.loader.decodeAfterLoading(audioContext, '_drum_36_0_SBLive_sf2'); // kick
-    player.loader.decodeAfterLoading(audioContext, '_drum_38_0_SBLive_sf2'); // snare
     player.loader.decodeAfterLoading(audioContext, '_tone_0120_SBLive_sf2'); // marimba 1
     player.loader.decodeAfterLoading(audioContext, '_tone_0400_SBLive_sf2'); // strings
+
+    /* percussion */
+    player.loader.decodeAfterLoading(audioContext, '_drum_36_0_SBLive_sf2'); // kick
+    player.loader.decodeAfterLoading(audioContext, '_drum_38_0_SBLive_sf2'); // snare
 
 
     // Handle unified note playback
