feat: add Elm code generation macro and update dependencies

--- a/src/index2.html
+++ b/src/index2.html
@@ -27,7 +27,11 @@
 <script src='https://surikov.github.io/webaudiofont/npm/dist/WebAudioFontPlayer.js'></script>
 
 <script type="module">
+    //import { generateElm } from '../generate-config-macro' with { type: 'macro' };
+    //generateElm(); // triggers macro at build time
+
     import { Elm } from "./Main2.elm";
+
 
     // Capture globals as clean constants
 
