--- a/src/index2.html
+++ b/src/index2.html
@@ -21,6 +21,10 @@
 <script src='https://surikov.github.io/webaudiofontdata/sound/0120_SBLive_sf2.js'></script>
 <!-- strings -->
 <script src='https://surikov.github.io/webaudiofontdata/sound/0400_SBLive_sf2.js'></script>
+<script src='https://surikov.github.io/webaudiofontdata/sound/0450_SBLive_sf2.js'></script>
+<!-- flute -->
+<script src='https://surikov.github.io/webaudiofontdata/sound/0730_SBLive_sf2.js'></script>
+<script src='https://surikov.github.io/webaudiofontdata/sound/0730_Aspirin_sf2_file.js'></script>
 
 
 <!-- Load WebAudioFont player from CDN -->
@@ -46,6 +50,9 @@
     player.loader.decodeAfterLoading(audioContext, '_tone_0000_SBLive_sf2'); // piano
     player.loader.decodeAfterLoading(audioContext, '_tone_0120_SBLive_sf2'); // marimba 1
     player.loader.decodeAfterLoading(audioContext, '_tone_0400_SBLive_sf2'); // strings
+    player.loader.decodeAfterLoading(audioContext, '_tone_0450_SBLive_sf2'); // strings
+    player.loader.decodeAfterLoading(audioContext, '_tone_0730_SBLive_sf2'); // flute
+    player.loader.decodeAfterLoading(audioContext, '_tone_0730_Aspirin_sf2_file'); // flute
 
     /* percussion */
     player.loader.decodeAfterLoading(audioContext, '_drum_36_0_SBLive_sf2'); // kick
